--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -1,4 +1,13 @@
-click {
+.click {
     font-size: 28px;
     font-family: Helvetica, "Times New Roman", "sans-serif";
+}
+
+.yes {
+    background-color: black;
+    color: white;
+}
+
+.no {
+    background-color: yellow;
 }
