--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -6,12 +6,16 @@ body {
   margin: 0;
   background: #eee;
   font-family: Besley, serif;
+  padding: 8px;
+  margin: 8px;
 }
 
 .header {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  padding: 8px;
 }
 
 .profile-image {
@@ -27,6 +31,8 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  padding-left: 16px;
+  margin-right: -8px;
 }
 
 button {
@@ -45,4 +51,14 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+  gap: 16px;
+}
+
+.right {
+  margin-left: auto;
+  display: flex;
+  gap: 16px;
+  align-items: center;
 }
