--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,7 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 15px;
 }
 
 .icon {
@@ -33,6 +34,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 10px;
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -48,12 +51,14 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+  margin-left: auto;
 }
 
 button {
   cursor: pointer;
   padding: 8px 16px;
   border-radius: 8px;
+  margin-right: auto;
 }
 
 button.continue {
@@ -66,4 +71,30 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.line-one {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.close-button {
+  margin-left: auto;
+}
+
+.header {
+  font-size: 20px;
+  font-weight: bold;
+  justify-content: space-between;
+}
+
+.text {
+  display: flex;
+  margin-left: 60px;
+}
+
+.bottom {
+  margin-top: 16px;
+  margin-left: 60px;
 }
