--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -16,6 +18,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 5px;
 }
 
 input {
@@ -23,4 +26,78 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between; 
+  align-items: center;
+  padding: 16px;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  box-sizing: border-box;
+}
+
+.header .left-links {
+  display: flex;
+  gap: 8px;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.header .right-links {
+  display: flex;
+  gap: 8px;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: gray;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.content-wrapper {
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  flex: 1;
+  margin-top: 64px;
+}
+
+.buttons {
+  margin-top: 10px;
+  display: flex;
+  gap: 2px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #eeeeee;
+}
+
+.footer .left-links {
+  list-style-type: none;
+  display: flex;
+  gap: 8px;
+  padding: -20px;
+}
+
+.footer .right-links {
+  list-style-type: none;
+  display: flex;
+  gap: 8px;
+  padding-right: 20px;
 }
